# cookie_locomotive

./: .gitlab-ci.yml  CMakeLists.txt  Dockerfile
src/: client.cpp  locomotive.cpp  server.cpp
